# yarborough

./: .gitignore  .gitmodules  .prettierignore  AGENTS.md  README.md  codecov.yml  cspell.json  index.html  package-lock.json  package.json  pnpm-approve-builds.json  pnpm-lock.yaml  vite.config.ts  yarborough.code-workspace
.agent/workflows/: README.md  check-lints  fix-bidding-test-suite.md  fix-lints  run-tests  update-expectations  validate-pr  watch-and-fix-ci
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
crates/bridge-cli/: Cargo.toml
crates/bridge-cli/src/: bidding_utils.rs  lib.rs
crates/bridge-core/: Cargo.toml
crates/bridge-engine/: Cargo.toml
crates/bridge-engine/src/: bidding_utils.rs  engine.rs  inference.rs  lib.rs  schema.rs  trace.rs
crates/bridge-engine/src/dsl/: auction_predicates.rs  bidding_rule.rs  call_predicates.rs  macros.rs  mod.rs  planner.rs  shows.rs
crates/bridge-engine/src/nbk/: auction_model.rs  bid_selector.rs  call_menu.rs  call_selector.rs  constraints.rs  discovery.rs  hand_model.rs  interpreter.rs  limit.rs  mod.rs  opening.rs  partner_model.rs  point_ranges.rs  semantics.rs  trace.rs
crates/bridge-engine/src/rules/: auction_predicates.rs  bidding_rule.rs  call_predicates.rs  discovery.rs  limit.rs  macros.rs  majors.yaml  minors.yaml  mod.rs  natural.rs  notrump.yaml  opening.rs  openings.yaml  registry.rs  sayc.yaml  shows.rs
crates/bridge-engine/src/rules/competitive/: doubles.yaml
crates/bridge-engine/src/rules/majors/: jacoby_2nt.yaml  raises.yaml  rebids.yaml  responses.yaml
crates/bridge-engine/src/rules/minors/: raises.yaml  rebids.yaml  responses.yaml
crates/bridge-engine/src/rules/natural/: law_of_total_tricks.yaml  lott.yaml  sound.yaml
crates/bridge-engine/src/rules/notrump/: jacoby.yaml  responses.yaml  stayman.yaml
crates/bridge-engine/src/rules/preemptive/: responses.yaml
crates/bridge-engine/src/rules/strong/: responses.yaml
crates/bridge-engine/tests/: README.md  expectations.yaml  harness.rs  sayc_regression.expectations.yaml  sayc_standard.expectations.yaml
crates/bridge-solver/: Cargo.toml
crates/bridge-wasm/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: bidding_utils.rs  lib.rs  reference_bidder.rs
crates/engine/: Cargo.toml
crates/types/: Cargo.toml
crates/wasm/: Cargo.toml
docs/: bidding_card.md  bidding_engine.md  natural.md  natural_kernel.md
scripts/: README.md  fix-formatting.sh  presubmit.sh  quick-check.sh  validate-pr.sh
src/: App.tsx
src/bridge/: auction.ts  engine.ts  (+6 more)
(+111 files in other folders)
