[package]
name = "bridge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge-core = { path = "../bridge-core" }
bridge-engine = { path = "../bridge-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
