[package]
name = "bridge-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bridge-core = { path = "../bridge-core" }
serde_yaml = "0.9.34"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }

[[bin]]
name = "bidding-debug"
path = "src/bin/bidding_debug.rs"

[dev-dependencies]
serde_yaml = "0.9.34"
indexmap = { version = "2.2.6", features = ["serde"] }
