[package]
name = "bridge-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bridge-core = { path = "../bridge-core" }
serde_yaml = "0.9.34"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.34"
indexmap = { version = "2.2.6", features = ["serde"] }
