[package]
name = "bridge-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bridge-core = { path = "../bridge-core" }
serde_yaml = "0.9.34"
serde_json = "1"
rand = "0.8"

[dev-dependencies]
serde_yaml = "0.9.34"
indexmap = { version = "2.2.6", features = ["serde"] }
